Updated About Me

--- a/index.html
+++ b/index.html
@@ -73,9 +73,14 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+			   <ul>
+  				<li>
+				Passionate and self-motivated electrical engineer with two years of experience using machine learning and data science concepts for analyzing risks and uncertainties in power systems. 
+				</li>
+  				<li>
+			       Extensively used Matlab, R, SQL, Python packages (Numpy, Scikit learn, Pandas and Seaborne) and Power Systems Tools (OpenDSS, PSS/E, Power World) while working as a research assistant at EDD and as a summer intern as ERCOT.
+				</li>
+			  </ul>
                     </p>
                 </div>
             </div>
