Added a link to download resume

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Durga Aryal</h1>
             <h2>Electrical Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="Durga_Aryal_resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -97,7 +97,7 @@
 		<br>
 		Blacksburg, VA, USA.
 		<br>
-		<b>Thesis</b>: Analysis and Planning of Power Transmission System Subject to Uncertainties in the Grid.
+		<b>Thesis</b>: Analysis and Planning of Power Transmission System Subject to Uncertainties and DER Growth in the Grid.
 	     </h4>        
 	</div>
         <!-- End .education-block -->
@@ -125,9 +125,9 @@
                 - Used PSS/E with Python for studying transient and steady-state stability studies of power systems subject to utility-scale integration of renewable sources (wind and solar) in the grid.
                 <br>
 <!--                - Used Python packages (Numpy, SciPy, StatsModel and Scikitlearn) to forecast electricity demand in a city.-->
-                - Performed time series analysis (ARIMA) on electric circuits to analyze the stability of circuits. Used SQL queries to access data from Microsoft Access database.
+                - Performed quasi-static time series analysis on electric transmission and distribution systems using Python and Distribution Engineering Workstation (DEW). Used SQL queries to access the database.
                 <br>
-                - Trained artificial neural network (using Keras and Tensorflow in Python) and forecasted the photovoltaic/solar power generation.
+                - Trained an LSTM recurrent neural network (RNN) using Keras and Tensorflow in Python and forecasted the photovoltaic/solar power generation.
                 </p>
             </div>
             
@@ -137,7 +137,7 @@
                 <p style="color:#777777">
                     - Implemented k-means clustering in Matlab and developed a sampling tool for facilitating probabilistic transmission planning. Used UPLAN production-cost simulation for generating the data (wind, solar and load profiles). <!The tool accounts for uncertainties in renewable sources, load and weather, and effectively samples credible scenarios that can be used to study a variety of conditions that stress the transmission system.>
                 <br>
-                    - Used the developed sampling tool for performing reliability analysis. Reduced the risk metric (namely expected unserved energy (EUE)) by approximately 20%.
+                    - Used the developed sampling tool for performing reliability and economic analysis. Reduced the risk metric, namely expected unserved energy (EUE), by approximately 20%.
                 </p>
             </div>
         </div>
@@ -230,19 +230,12 @@
     </div>
     <!-- End #skills -->
 
-<!--    <div id="contact">-->
-<!--        <h2>Get in Touch</h2>-->
-<!--        <div id="contact-form">-->
-<!--            <form method="POST" action="https://formspree.io/email@email.com">-->
-<!--                <input type="hidden" name="_subject" value="Contact request from personal website" />-->
-<!--                <input type="email" name="_replyto" placeholder="Your email" required>-->
-<!--                <textarea name="message" placeholder="Your message" required></textarea>-->
-<!--                <button type="submit">Send</button>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--        <!-- End #contact-form -->-->
-<!--    </div>-->
-    <!-- End #contact -->
+    <div id="contact">
+        <h2>Get in Touch</h2>
+        <h3>Email:    daryal@vt.edu</h3>
+        <h3>Linkedin: <a href="https://www.linkedin.com/in/durga-aryal-b6b680155" target="_blank">https://www.linkedin.com/in/durga-aryal-b6b680155</i></a></h3>
+    </div>
+<!--     End #contact-->
 
     <footer>
         <div class="container">
