--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
             <li>Hadoop</li>
             <li>Keras</li>
             <li>Tensorflow</li>
+            <li>Git</li>
             <li>HTML</li>
             <li>PSS/E</li>
             <li>Power World</li>
