Improved AboutMe section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div id="about">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <h2 class="heading">About Me</h2>
                 </div>
                 <div class="col-md-8">
@@ -78,8 +78,14 @@
 				Passionate and self-motivated electrical engineer with two years of experience using machine learning and data science concepts for analyzing risks and uncertainties in power systems. 
 				</li>
   				<li>
-			       Extensively used Matlab, R, SQL, Python packages (Numpy, Pandas, Scikitlearn, Seaborn, Matplotlib, Keras and Tensorflow) and Power Systems Tools (OpenDSS, PSS/E, Power World) while working as a research assistant at EDD and as a summer intern as ERCOT.
+                    Experience working as a research assistant at EDD and a summer intern as ERCOT.
 				</li>
+                <li>
+                    Core skills include:
+                    <br> - Languagues: Python, Matlab, R, SQL.
+                    <br> - Data-science packages: Numpy, Pandas, Scikitlearn, Seaborn, Matplotlib, Keras and Tensorflow.
+                    <br> - Power Systems Tools: OpenDSS, PSS/E, Power World, DEW.
+                </li>
 			  </ul>
                     </p>
                 </div>
