--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
             <li>Python</li>
             <li>Matlab</li>
             <li>R</li>
+            <li>Microsoft Excel</li>
             <li>SQL</li>
             <li>Hive</li>
             <li>Pig</li>
