--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Durga Aryal</h1>
             <h2>Electrical Engineer</h2>
-            <a href="Durga_Aryal_resume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="DA_Resume/Durga_Aryal_resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
